--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,11 +7,11 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background: linear-gradient(to right, #4c90f0, #9539f5);
+            background: #f4f4f4;
             padding: 20px;
         }
         .resume-container {
-            max-width: 800px;
+            max-width: 900px;
             background: white;
             display: flex;
             border-radius: 10px;
@@ -19,20 +19,20 @@
             box-shadow: 0px 4px 10px rgba(0,0,0,0.2);
         }
         .sidebar {
-            background: #1e1e2e;
+            background: #2d4a6f;
             color: white;
-            width: 30%;
+            width: 35%;
             padding: 20px;
             text-align: center;
         }
         .sidebar img {
-            width: 100px;
-            height: 100px;
+            width: 120px;
+            height: 120px;
             border-radius: 50%;
             margin-bottom: 10px;
         }
         .sidebar h2 {
-            font-size: 20px;
+            font-size: 22px;
         }
         .sidebar p {
             font-size: 14px;
@@ -40,15 +40,25 @@
         }
         .main-content {
             padding: 20px;
-            width: 70%;
+            width: 65%;
         }
         .main-content h2 {
-            color: #1e1e2e;
+            color: #2d4a6f;
             border-bottom: 2px solid #ccc;
             padding-bottom: 5px;
         }
         .section {
             margin-bottom: 15px;
+        }
+        .icon {
+            font-size: 18px;
+            margin-right: 5px;
+        }
+        .skills, .about-me {
+            background: #eef2f7;
+            padding: 10px;
+            border-radius: 5px;
+            margin-top: 10px;
         }
     </style>
 </head>
@@ -56,39 +66,53 @@
 
 <div class="resume-container">
     <div class="sidebar">
-        <img src="https://i.ibb.co/dStC3KB/2cad186a6fc9.jpg" alt="Profile Picture">
-        <h2>NAVAMITHA S</h2>
+        <img src="https://i.ibb.co/4wY71zdv/4c331030f79f.jpg" alt="Profile Picture">
+        <h2>RANJINI R</h2>
         <p>Student</p>
         <h3>Contact</h3>
-        <p><strong>Phone:</strong> 6380510014</p>
-        <p><strong>Email:</strong> navamimahh@gmail.com</p>
-        <p><strong>Address:</strong> 9/7 West Verrakutty Street, Old Washermanpet, Chennai - 600021</p>
-        <h3>Expertise</h3>
-        <p>Creativity</p>
-        <p>MS Excel</p>
-        <h3>Language</h3>
-        <p>English, Tamil</p>
-        <h3>Award</h3>
-        <p>Passed in TNPSC (GROUP-IV) Exam</p>
+        <p><strong>Phone:</strong> 6380255592</p>
+        <p><strong>Email:</strong> ranjinirajkumar481@gmail.com</p>
+        <p><strong>Address:</strong> 9/7 West Verrakutty Street, Old Washermanpet, Chennai-600021</p>
+        <div class="about-me">
+            <h3>About Me</h3>
+            <p>I am a passionate and dedicated student with strong leadership, organization, and communication skills. Looking forward to my first work experience.</p>
+        </div>
+        <div class="skills">
+            <h3>Skills</h3>
+            <ul>
+                <li>Leadership</li>
+                <li>Basic knowledge of CorelDRAW</li>
+                <li>MS Word, MS Excel, PowerPoint</li>
+            </ul>
+        </div>
     </div>
     <div class="main-content">
         <div class="section">
             <h2>Education</h2>
-            <p><strong>K C Sankaralinga Nadar Higher Secondary School</strong> (2022-2023)</p>
-            <p>Scored 75% in 11th and 12th board exam</p>
+            <p><strong>Victory Matriculation Higher Secondary School</strong> (2022-2023)</p>
+            <p>80% in 10th and 12th board exam</p>
+            <p><strong>Madras University</strong></p>
+            <p>Bachelor of Computer Science (In Progress)</p>
             <p><strong>Sri Kanyaka Parameswari Arts & Science College for Women</strong> (2023-2026)</p>
-            <p>1st year - Scored 75%</p>
-            <p>2nd year - Scored 78%</p>
         </div>
         <div class="section">
             <h2>Additional Knowledge</h2>
             <p><strong>Webinar 2023</strong></p>
             <ul>
+                <li>Completed a CorelDRAW application course.</li>
                 <li>Attended 3-day classes on HTML, CSS, JavaScript.</li>
+            </ul>
+            <p><strong>Workshop 2024</strong></p>
+            <ul>
                 <li>Attended 3-hour workshop on Machine Learning using Python.</li>
                 <li>Attended 3-hour workshop on Robotics.</li>
                 <li>Attended 3-hour workshop on Data Analytics.</li>
             </ul>
+        </div>
+        <div class="section">
+            <h2>Leadership</h2>
+            <p>2024 - 2025: Served as Association Secretary, organized multiple programs, workshops, and seminars.</p>
+            <p><em>Curious to learn programming languages</em></p>
         </div>
     </div>
 </div>
